# filter_pattern

./: .gitignore  README.md  config.h4.yml  index.html  pyproject.toml  run.sh
.github/workflows/: actions-smoke.yml  scanner-pages-v2.yml  scanner-pages.yml
d1/: index.html
docs/superpowers/plans/: 2026-06-14-reviewable-filter-patterns.md
docs/superpowers/specs/: 2026-06-14-reviewable-filter-patterns-design.md
examples/: config.example.yml
filter_pattern/: __init__.py  chart.py  cli.py  data.py  detector.py  direction.py  direction_backtest.py  exness.py  models.py  providers.py  report.py  rrg_dashboard.py  scanner.py  techniques.py  universe.py  util.py
h4/: index.html
mockups/all-pattern-report/: index.html
mockups/coverage-statistics/: index.html
mockups/report-redesign/: index.html
mockups/report-ui-options/: index.html
mockups/rrg-market-filter-demo/: index.html
mockups/tradingview-terminal/: index.html
tests/: test_cli.py  test_data.py  test_detector.py  test_direction.py  test_direction_backtest.py  test_exness.py  test_package_metadata.py  test_providers.py  test_report_chart.py  test_rrg_dashboard.py  test_scanner.py  test_universe.py  test_workflow_config.py
